[project]
name = "probounds"
version = "0.3.4"
description = "Probability bounds project"
authors = [{ name = "Uriah Finkel", email = "ufinkel@gmail.com" }]
requires-python = ">=3.9"
dependencies = [
  "numpy>=1.26.0",
  "polars>=1.6.0,<2.0.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "numpy>=1.26.0",
    "pre-commit>=3.7.0",
    "pytest>=8.4.0",
    "quartodoc>=0.11.1",
    "ruff>=0.11.13",
    "uv>=0.1.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-ra"
pythonpath = ["src"]
